# jump_model

./: .gitignore  model.sdf
jump_ml/: ddqn_keras.py  ddqn_torch.py  jump_fgserver.py  jump_main.py  jump_model.py  jump_system.py  utils.py
jump_msgs/: CMakeLists.txt
jump_msgs/proto/jump/msgs/: ResquestAction.proto  RobotInfos.proto  matrix.proto
jump_rgc/: CMakeLists.txt
jump_rgc/include/jump_controller/: jump_controller.h  jump_interface.h  jump_low_level_controller.h  jump_rgc.h  jump_robot_model.h  matrix.h  pred_control.h  rgc.h  rgc1.h  rgc2.h  rgc3.h  rgc4.h  rgc5.h  rgc6.h  simple_rgc.h
jump_rgc/python/: CMakeLists.txt
jump_rgc/python/src/: jump_interface_pybind11.cpp
jump_rgc/src/: jump_controller.cpp  jump_interface.cpp  jump_low_level_controller.cpp  jump_rgc.cpp  jump_robot_model.cpp  pred_control.cpp  rgc.cpp  rgc1.cpp  rgc2.cpp  rgc3.cpp  rgc4.cpp  rgc5.cpp  rgc6.cpp  simple_rgc.cpp
meshes/: body.dae  foot.dae  lower_leg.dae  upper_leg.dae
